<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rotation</string>
    <string name="app_name_rotation">Rotation</string>
    <string name="app_name_results">Results</string>
    <string name="app_id">388734354646891</string>

    <!-- Smash Rotation Fragment -->

    <string name="insert_player_name">Player\'s name</string>
    <string name="insert_player_name_button">OK</string>
    <string name="adapter_player_name">Player</string>
    <string name="adapter_player_wins">Wins: </string>
    <string name="adapter_player_losses">Losses: </string>
    <string name="error_insert_player_name">Please, inform a name</string>
    <string name="success_insert_player_name">Player registered</string>
    <string name="start_rotation">Rotation!</string>
    <string name="not_enough">Not enough players to start a rotation.</string>
    <string name="moar_players">Insert new players\nto start a Rotation :)</string>
    
    <string name="line_dialog">In Order</string>
    <string name="random_dialog">Random</string>

    <!-- Actions Dialog Fragment -->

    <string name="action_dialog_win">Won</string>
    <string name="action_dialog_lose">Lost</string>
    <string name="action_dialog_pass">Passed</string>
    <string name="new_challenger">New Challenger</string>

    <!-- Results Fragment -->
    <string name="result_number_of_games">Games</string>
    <string name="result_best_player">Best</string>
    <string name="result_worst_player">Worst</string>
    <string name="result_location">Location</string>
    <string name="results_text">Results</string>
    <string name="share_results">Share</string>
    <string name="restart_rotation">Restart Rotation!</string>

    <!-- Start Rotation Fragment -->
    
    <string name="finish_contest">Finish Contest</string>
    <string name="now_playing">Now Playing</string>
    <string name="finish_match">Finish Match!</string>
    <string name="next_player_text">Next Player:</string>

</resources>