<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tick.smashrotation.SmashRotationActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/top_bar_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_holder_height"
        android:background="@color/app_theme_red" >

        <TextView
            android:id="@+id/top_bar_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/top_bar_margin_left"
            android:text="@string/app_name_results"
            android:textColor="@color/white"
            android:textSize="@dimen/top_bar_text_size"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/holder_contest_information"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top_bar_holder"
        android:layout_marginTop="@dimen/result_texts_margin_top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/number_of_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/result_texts"
            android:text="@string/result_number_of_games"
            android:textColor="@color/app_theme_red_light"
            android:textSize="@dimen/result_texts_size" />

        <TextView
            android:id="@+id/best_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/result_texts"
            android:text="@string/result_best_player"
            android:textColor="@color/app_theme_red_light"
            android:textSize="@dimen/result_texts_size" />

        <TextView
            android:id="@+id/worst_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/result_texts"
            android:text="@string/result_worst_player"
            android:textColor="@color/app_theme_red_light"
            android:textSize="@dimen/result_texts_size" />
        
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/result_texts"
            android:text="@string/result_location"
            android:textColor="@color/app_theme_red_light"
            android:textSize="@dimen/result_texts_size" />
    </LinearLayout>

</RelativeLayout>