<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tick.smashrotation.SmashRotationActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/top_bar_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_holder_height"
        android:background="@color/app_theme_red" >

        <TextView
            android:id="@+id/top_bar_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/top_bar_margin_left"
            android:textStyle="bold"
            android:textSize="@dimen/top_bar_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/insert_player_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar_holder"
        android:orientation="horizontal"
        android:padding="@dimen/insert_player_holder_padding" >

        <EditText
            android:id="@+id/insert_player_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/insert_player_name_height"
            android:layout_weight="5"
            android:hint="@string/insert_player_name"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Button
            android:id="@+id/insert_player_name_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert_player_name_button" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/holder_start_rotation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/holder_start_rotation_height"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/holder_start_rotation_margin_top"
        android:background="@drawable/start_rotation_btn_selector" >

        <TextView
            android:id="@+id/start_rotation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start_rotation"
            android:textColor="@color/white"
            android:textSize="@dimen/bottom_bar_text_size" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_of_players"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/holder_start_rotation"
        android:layout_below="@id/insert_player_holder" >
    </ListView>

</RelativeLayout>