<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_white"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.tick.smashrotation.SmashRotationActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/actions_holder"
        android:layout_width="@dimen/holder_width"
        android:layout_height="@dimen/holder_height"
        android:layout_centerInParent="true"
        android:background="@color/light_gray_pressed"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/actions_margin_left"
        android:paddingRight="@dimen/actions_margin_right" >

        <Button
            android:id="@+id/action_winner"
            android:layout_width="@dimen/actions_width"
            android:layout_height="@dimen/actions_height"
            android:background="@color/light_gray"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/action_dialog_win"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/action_loser"
            android:layout_width="@dimen/actions_width"
            android:layout_height="@dimen/actions_height"
            android:layout_marginLeft="@dimen/actions_center_margin_left"
            android:layout_marginRight="@dimen/actions_center_margin_right"
            android:background="@color/light_gray"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/action_dialog_lose"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/action_pass"
            android:layout_width="@dimen/actions_width"
            android:layout_height="@dimen/actions_height"
            android:background="@color/light_gray"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/action_dialog_pass"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>